FEAT: Edit Export message
